k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ir-tabletop
spec: {}
status: {}
