k8s/10-mongodb.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb
  namespace: ir-tabletop

spec:
  # Headless Service для StatefulSet.
  clusterIP: None

  selector:
    app: mongodb

  ports:
    - port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongodb
  namespace: ir-tabletop

spec:
  serviceName: mongodb
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb
          image: mongo:7
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: data
              mountPath: /data/db

  # Дані MongoDB зберігаються окремо від pod.
  volumeClaimTemplates:
    - metadata:
        name: data

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
