k8s/20-scenario.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scenario
  namespace: ir-tabletop

spec:
  replicas: 2

  selector:
    matchLabels:
      app: scenario

  template:
    metadata:
      labels:
        app: scenario

    spec:
      containers:
        - name: scenario
          image: vitaliisusukailo/ir-tabletop-scenario:1.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          # Потрібно для подальшого HPA.
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5

---
apiVersion: v1
kind: Service

metadata:
  name: scenario
  namespace: ir-tabletop

spec:
  selector:
    app: scenario

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
