k8s/30-session.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: session
  namespace: ir-tabletop

spec:
  replicas: 2

  selector:
    matchLabels:
      app: session

  template:
    metadata:
      labels:
        app: session

    spec:
      containers:
        - name: session
          image: vitaliisusukailo/ir-tabletop-session:1.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          # Адреси внутрішніх Kubernetes-сервісів.
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5

---
apiVersion: v1
kind: Service

metadata:
  name: session
  namespace: ir-tabletop

spec:
  selector:
    app: session

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
