k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ir-tabletop
  namespace: ir-tabletop

spec:
  ingressClassName: nginx

  rules:
    - host: tabletop.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: session
                port:
                  number: 8000
